spring-cloud-deployment/provider/deployment-gray.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-gray
  namespace: springboot-cloud
  labels:
    app: provider
    version: gray
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider
      version: gray
  template:
    metadata:
      labels:
        app: provider
        version: gray
    spec:
      containers:
      - image: docker.io/song1206/provider:v1
        name: provider-gray
        imagePullPolicy: Always
        ports:
        - containerPort: 8081


#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: provider-gray
#  namespace: springboot-cloud
#spec:
#  ports:
#    - port: 8081
#      targetPort: 8081
#  selector:
#    app: provider-gray
