spring-cloud-deployment/provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-v1
  namespace: springboot-cloud
  labels:
    app: provider-v1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider-v1
      version: v1
  template:
    metadata:
      labels:
        app: provider-v1
        version: v1
    spec:
      containers:
      - image: docker.io/song1206/provider:v1
        name: provider-v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8081


---
apiVersion: v1
kind: Service
metadata:
  name: provider-v1
  namespace: springboot-cloud
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: provider-v1
