spring-cloud-deployment/provider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider
  namespace: springboot-cloud
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: provider
