spring-cloud-deployment/provider/virtualservice-simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: provider-vs
  namespace: springboot-cloud
spec:
  hosts:
    - "*"
  gateways:
  - spring-gateway
  http:
  - name: default
    match:
      - uri:
          prefix: "/provider/"
    rewrite:
      uri: /
    route:
    - destination:
        host: provider.springboot-cloud.svc.cluster.local
        port:
          number: 8081
